# neochat

./: .kde-ci.yml  CMakeLists.txt  res.qrc
android/: AndroidManifest.xml
autotests/: CMakeLists.txt  neochatroomtest.cpp
imports/NeoChat/Component/: FullScreenImage.qml  RoomListItem.qml  qmldir
imports/NeoChat/Component/Call/: AnswerSwipe.qml  CallConfigurationSheet.qml  CallPageButton.qml  qmldir
imports/NeoChat/Component/ChatBox/: ChatBar.qml  ChatBox.qml  LocationChooser.qml  qmldir
imports/NeoChat/Component/Emoji/: EmojiPicker.qml  StickerPicker.qml  qmldir
imports/NeoChat/Component/Login/: Loading.qml
imports/NeoChat/Component/Timeline/: EventDelegate.qml  ImageDelegate.qml  LocationDelegate.qml  ReactionDelegate.qml  TextDelegate.qml  TimelineContainer.qml  qmldir
imports/NeoChat/Dialog/: UserDetailDialog.qml
imports/NeoChat/Dialog/KeyVerification/: EmojiItem.qml  EmojiRow.qml  EmojiSas.qml  KeyVerificationDialog.qml  Message.qml  VerificationCanceled.qml
imports/NeoChat/Menu/Timeline/: FileDelegateContextMenu.qml  MessageDelegateContextMenu.qml
imports/NeoChat/Page/: CallPage.qml  JoinRoomPage.qml  LoadingPage.qml  RoomListPage.qml  RoomPage.qml  SettingsPage.qml  WelcomePage.qml
imports/NeoChat/RoomSettings/: Categories.qml  ImagePackEditor.qml  RoomStickers.qml
imports/NeoChat/Settings/: AboutPage.qml  AppearanceSettingsPage.qml  DevicesPage.qml  Emoticons.qml  GeneralSettingsPage.qml  SettingsPage.qml  SpellCheckingPage.qml
qml/: main.qml
src/: CMakeLists.txt  actionshandler.cpp  actionshandler.h  chatboxhelper.cpp  chatboxhelper.h  controller.cpp  controller.h  emojiformatter.cpp  emojiformatter.h  imagepackevent.cpp  imagepackevent.h  imagepacksmodel.cpp  imagepacksmodel.h  login.cpp  main.cpp  matriximageprovider.cpp  matriximageprovider.h  messageeventmodel.cpp  messageeventmodel.h  neochatconfig.kcfg  neochatroom.cpp  neochatroom.h  notificationsmanager.cpp  notificationsmanager.h  plasma-runner-neochat.desktop  publicroomlistmodel.h  roomlistmodel.cpp  roomlistmodel.h  runner.cpp  runner.h  spacechildrenmodel.cpp  spacechildrenmodel.h  stickerevent.cpp  stickerevent.h  stickermodel.cpp  stickermodel.h
src/call/: audiodevicesmodel.cpp  audiodevicesmodel.h  audiosources.cpp  audiosources.h  calldevices.cpp  callmanager.cpp  callmanager.h  callsession.cpp  callsession.h  devicemonitor.cpp  devicemonitor.h  videodevicesmodel.cpp  videodevicesmodel.h  videosources.cpp
